# Powerwave-Analyzer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml
examples/: generate_synthetic_csv.py  grid_distorted.csv  grid_pure.csv
powerwave/: __init__.py  cli.py  csv_detect.py  i18n.py  io.py  metrics.py  plotly_plots.py  plots.py  signal_processing.py
