[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerwave"
version = "0.1.0"
description = "PowerWave Analyzer - offline waveform analysis"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.4",
  "scipy>=1.13.0",
  "pandas>=2.2.0",
  "matplotlib>=3.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["powerwave*"]
exclude = ["plots*", "examples*"]
namespaces = false

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "Q"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

